Show Avanscoperto logo + Add partner logos

--- a/index.html
+++ b/index.html
@@ -173,29 +173,29 @@
                             <img class="sponsor-title" src="img/sponsor-gold.png" alt="Gold Sponsor" />
                             <div class="sponsor-line">
                                 <div class="sponsor-div">
-                                    <p><img src="img/logo_sky.png" /></p>
+                                    <p><img src="img/logo_sky.png" alt="Sky" /></p>
                                 </div>
                             </div>
                             
-                            <!--
                             <img class="sponsor-title" src="img/sponsor-silver.png" alt="Silver Sponsor" />
                             <div class="sponsor-line">
                                 <div class="sponsor-div">
-                                    <p><img src="img/logo_avanscoperta.png" /></p>
+                                    <p><img src="img/logo_avanscoperta.png" alt="Avanscoperta" /></p>
                                 </div>
                             </div>
 
                             <h3 class="partner-title">Partner</h3>
                             <div class="partner-line">
                                 <div class="partner-div">
-                                    <p><img src="" alt="" /></p>
+                                    <p><img src="img/IAM_logo.png" alt="Italian Agile Movement" /></p>
                                 </div>
                                 <div class="partner-div">
-                                    <p><img src="" alt="" /></p>
+                                    <p><img src="img/logo_docebo.jpg" alt="Docebo" /></p>
+                                </div>
+                                <div class="partner-div">
+                                    <p><img src="img/logo_swicket.jpg" alt="Swicket" /></p>
                                 </div>
                             </div>
-                            -->
-                            
                         </div>
                     </div>
                 </div>
