Add links to sponsor logos

--- a/index.html
+++ b/index.html
@@ -173,27 +173,27 @@
                             <img class="sponsor-title" src="img/sponsor-gold.png" alt="Gold Sponsor" />
                             <div class="sponsor-line">
                                 <div class="sponsor-div">
-                                    <p><img src="img/logo_sky.png" alt="Sky" /></p>
+                                    <p><a href="https://www.sky.it/" target="_blank"><img src="img/logo_sky.png" alt="Sky" /></a></p>
                                 </div>
                             </div>
                             
                             <img class="sponsor-title" src="img/sponsor-silver.png" alt="Silver Sponsor" />
                             <div class="sponsor-line">
                                 <div class="sponsor-div">
-                                    <p><img src="img/logo_avanscoperta.png" alt="Avanscoperta" /></p>
+                                    <p><a href="https://www.avanscoperta.it/" target="_blank"><img src="img/logo_avanscoperta.png" alt="Avanscoperta" /></a></p>
                                 </div>
                             </div>
 
                             <h3 class="partner-title">Partner</h3>
                             <div class="partner-line">
                                 <div class="partner-div">
-                                    <p><img src="img/IAM_logo.png" alt="Italian Agile Movement" /></p>
+                                    <p><a href="http://www.agilemovement.it/" target="_blank"><img src="img/IAM_logo.png" alt="Italian Agile Movement" /></a></p>
                                 </div>
                                 <div class="partner-div">
-                                    <p><img src="img/logo_docebo.jpg" alt="Docebo" /></p>
+                                    <p><a href="https://www.docebo.com/" target="_blank"><img src="img/logo_docebo.jpg" alt="Docebo" /></a></p>
                                 </div>
                                 <div class="partner-div">
-                                    <p><img src="img/logo_swicket.jpg" alt="Swicket" /></p>
+                                    <p><a href="https://swicket.io/" target="_blank"><img src="img/logo_swicket.jpg" alt="Swicket" /></a></p>
                                 </div>
                             </div>
                         </div>
