Add AEP and Giuneco logo

--- a/index.html
+++ b/index.html
@@ -175,12 +175,18 @@
                                 <div class="sponsor-div">
                                     <p><a href="https://www.sky.it/" target="_blank"><img src="img/logo_sky.png" alt="Sky" /></a></p>
                                 </div>
+                                <div class="sponsor-div">
+                                    <p><a href="http://www.aep-italia.it/" target="_blank"><img src="img/logo_aep.png" alt="AEP Ticketing Solutions" /></a></p>
+                                </div>
                             </div>
                             
                             <img class="sponsor-title" src="img/sponsor-silver.png" alt="Silver Sponsor" />
                             <div class="sponsor-line">
                                 <div class="sponsor-div">
                                     <p><a href="https://www.avanscoperta.it/" target="_blank"><img src="img/logo_avanscoperta.png" alt="Avanscoperta" /></a></p>
+                                </div>
+                                <div class="sponsor-div">
+                                    <p><a href="http://www.giuneco.it/" target="_blank"><img src="img/logo_giuneco.png" alt="Giuneco" /></a></p>
                                 </div>
                             </div>
 
