added doubleloop logo

--- a/index.html
+++ b/index.html
@@ -188,6 +188,9 @@
                                 <div class="sponsor-div">
                                     <p><a href="http://www.giuneco.it/" target="_blank"><img src="img/logo_giuneco.png" alt="Giuneco" /></a></p>
                                 </div>
+                                <div class="sponsor-div">
+                                    <p><a href="http://doubleloop.io/" target="_blank"><img src="img/doubleloop-logo.png" alt="doubleloop" /></a></p>
+                                </div>
                             </div>
 
                             <h3 class="partner-title">Partner</h3>
