Add Plan Group and Softec logos

--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
                                 <div class="sponsor-div">
                                     <p><a href="http://www.aep-italia.it/" target="_blank"><img src="img/logo_aep.png" alt="AEP Ticketing Solutions" /></a></p>
                                 </div>
+                                <div class="sponsor-div">
+                                    <p><a href="https://www.softecspa.com/it/" target="_blank"><img src="img/logo_softec.png" alt="Softec S.p.A." /></a></p>
+                                </div>
                             </div>
                             
                             <img class="sponsor-title" src="img/sponsor-silver.png" alt="Silver Sponsor" />
@@ -190,6 +193,9 @@
                                 </div>
                                 <div class="sponsor-div">
                                     <p><a href="http://doubleloop.io/" target="_blank"><img src="img/doubleloop-logo.png" alt="doubleloop" /></a></p>
+                                </div>
+                                <div class="sponsor-div">
+                                    <p><a href="http://www.plansoft.it/" target="_blank"><img src="img/logo_plangroup.png" alt="Plan Group" /></a></p>
                                 </div>
                             </div>
 
