esprit cam sponsorship

--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@
                                 </div>
                                 <div class="sponsor-div">
                                     <p><a href="https://www.softecspa.com/it/" target="_blank"><img src="img/logo_softec.png" alt="Softec S.p.A." /></a></p>
+                                </div>  
+                                <div class="sponsor-div">
+                                    <p><a href="https://www.espritcam.it/" target="_blank"><img src="img/logo_espritCAM.jpg" alt="Esprit CAM" /></a></p>
                                 </div>
                             </div>
                             
