Add Register.it logo

--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
                                 <div class="sponsor-div">
                                     <p><a href="https://www.espritcam.it/" target="_blank"><img src="img/logo_espritCAM.jpg" alt="Esprit CAM" /></a></p>
                                 </div>
+                                <div class="sponsor-div">
+                                    <p><a href="https://www.register.it/" target="_blank"><img src="img/logo_registerit.png" alt="Register.it" /></a></p>
+                                </div>
                             </div>
                             
                             <img class="sponsor-title" src="img/sponsor-silver.png" alt="Silver Sponsor" />
