Add agenda from Sessionize

--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
                         <h3>Il programma sarà disponibile a breve.</h3>
                     </div>
                 </div>
+                <div>
+                    <!-- <script type="text/javascript" src="https://sessionize.com/api/v2/k227of5y/view/gridtable"></script> -->
+                    <!-- <script type="text/javascript" src="https://sessionize.com/api/v2/odpvet1z/view/grid"></script> -->
+                </div>
                 <div class="page-scroll" style="margin-top: 50px">
                     <a href="#sponsor" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
                 </div>
