--- a/index.html
+++ b/index.html
@@ -147,14 +147,11 @@
         <section id="programma" class="content-section text-center">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
+                    <div class="col-lg-12">
                         <h2>Programma</h2>
-                        <h3>Il programma sarà disponibile a breve.</h3>
+		                    <script type="text/javascript" src="https://sessionize.com/api/v2/k227of5y/view/gridtable"></script>
+		                    <!-- <script type="text/javascript" src="https://sessionize.com/api/v2/odpvet1z/view/grid"></script> -->
                     </div>
-                </div>
-                <div>
-                    <!-- <script type="text/javascript" src="https://sessionize.com/api/v2/k227of5y/view/gridtable"></script> -->
-                    <!-- <script type="text/javascript" src="https://sessionize.com/api/v2/odpvet1z/view/grid"></script> -->
                 </div>
                 <div class="page-scroll" style="margin-top: 50px">
                     <a href="#sponsor" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
