Added sponsor fleet2track

--- a/index.html
+++ b/index.html
@@ -204,6 +204,9 @@
                                 <div class="sponsor-div">
                                     <p><a href="http://www.plansoft.it/" target="_blank"><img src="img/logo_plangroup.png" alt="Plan Group" /></a></p>
                                 </div>
+                                <div class="sponsor-div">
+                                    <p><a href="https://www.fleet2track.com/" target="_blank"><img src="img/logo_f2t.png" alt="Fleet2Track" /></a></p>
+                                </div>
                             </div>
 
                             <h3 class="partner-title">Partner</h3>
