Added vodafone sponsor

--- a/index.html
+++ b/index.html
@@ -188,6 +188,9 @@
                                 <div class="sponsor-div">
                                     <p><a href="https://www.register.it/" target="_blank"><img src="img/logo_registerit.png" alt="Register.it" /></a></p>
                                 </div>
+                                <div class="sponsor-div">
+                                    <p><a href="https://www.vodafone.it/" target="_blank"><img src="img/logo_vodafone.png" alt="Vodafone" /></a></p>
+                                </div>
                             </div>
                             
                             <img class="sponsor-title" src="img/sponsor-silver.png" alt="Silver Sponsor" />
