--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         </div>
         <div class="staff_member">
           <a href="https://www.linkedin.com/in/francesca-del-re-980930a/" target="_blank">
-            <img src="img/francesca-del-re.JPG" alt="Francesca Del Re" class="staff_member_img" />
+            <img src="img/francesca-del-re.jpg" alt="Francesca Del Re" class="staff_member_img" />
             <br />
             Francesca Del Re
           </a>
