--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
 
     <section id="descrizione" class="content-section content-section-text text-center">
       <p>
-        Negli ultimi anni, l’approccio agile allo sviluppo di progetti software e all’organizzazione del lavoro è
+        Negli ultimi anni, l'approccio agile allo sviluppo di progetti software e all’organizzazione del lavoro è
         passato da tema per pochi entusiasti a movimento su scala globale.
       </p>
       <p>
         Di fronte a questo cambiamento, è importante focalizzare l’attenzione sui
-        <b>princìpi</b> e sulle <b>pratiche</b> che permettono di rispondere ai cambiamenti e generare valore.
+        <b>principi</b> e sulle <b>pratiche</b> che permettono di rispondere ai cambiamenti e generare valore.
       </p>
       <p>
         Una giornata per raccontare cosa può migliorare il lavoro dei team e condividere idee e valori.
