--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Evolution over revolution" />
+    <meta name="description" content="Evolution over Revolution" />
     <meta name="author" content="" />
     <!-- raoul -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -22,7 +22,7 @@
 
     <meta property="og:image" content="https://agileday.it/mini/2018/prato/img/agile-venture-social.png" />
     <meta property="og:title" content="Agile Venture Firenze2019" />
-    <meta property="og:description" content="Evolution over revolution" />
+    <meta property="og:description" content="Evolution over Revolution" />
 
     <title>Agile Venture Firenze2019</title>
     <link rel="shortcut icon" href="img/favicon.png?3" />
@@ -107,7 +107,7 @@
               <div class="brand-frame">
                 <h1 class="brand-heading">
                   <img class="resp" id="headerimg" src="img/agile-venture-firenze.png" alt="Agile Venture Firenze" />
-                  Evolution over revolution
+                  Evolution over Revolution
                 </h1>
                 <p class="intro-text">Firenze, sabato 28 settembre 2019</p>
               </div>
