Fix sposnsor section titles

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="row">
           <div class="sponsor-list col-lg-12">
             <div class="sponsor-container">
-              <h3 class="sponsor-title">Main sponsor</h3>
+              <h3 class="sponsor-title">Main Sponsor</h3>
               <div class="sponsor-line">
                 <div class="sponsor-div">
                   <p>
@@ -233,7 +233,7 @@
                                 </div> -->
               </div>
 
-              <h3 class="sponsor-title base-sponsor">Base sponsor</h3>
+              <h3 class="sponsor-title base-sponsor">Base Sponsor</h3>
               <div class="sponsor-line">
                 <!-- <div class="sponsor-div">
                                     <p><a href="https://www.avanscoperta.it/" target="_blank"><img src="img/logo_avanscoperta.png" alt="Avanscoperta" /></a></p>
@@ -252,17 +252,17 @@
                                 </div> -->
               </div>
 
-              <h3 class="partner-title">Partner</h3>
+              <h3 class="partner-title">Media Partner</h3>
               <div class="partner-line">
-                <!-- <div class="partner-div">
-                                    <p><a href="http://www.agilemovement.it/" target="_blank"><img src="img/IAM_logo.png" alt="Italian Agile Movement" /></a></p>
-                                </div>
-                                <div class="partner-div">
-                                    <p><a href="https://www.docebo.com/" target="_blank"><img src="img/logo_docebo.jpg" alt="Docebo" /></a></p>
-                                </div>
-                                <div class="partner-div">
-                                    <p><a href="https://swicket.io/" target="_blank"><img src="img/logo_swicket.jpg" alt="Swicket" /></a></p>
-                                </div> -->
+                <div class="partner-div">
+                  <p><a href="http://www.agilemovement.it/" target="_blank"><img src="img/IAM_logo.png" alt="Italian Agile Movement" /></a></p>
+                </div>
+                <div class="partner-div">
+                    <p><a href="https://www.docebo.com/" target="_blank"><img src="img/logo_docebo.jpg" alt="Docebo" /></a></p>
+                </div>
+                <div class="partner-div">
+                    <p><a href="https://swicket.io/" target="_blank"><img src="img/logo_swicket.jpg" alt="Swicket" /></a></p>
+                </div>
               </div>
             </div>
           </div>
