--- a/index.html
+++ b/index.html
@@ -216,6 +216,13 @@
                     </a>
                   </p>
                 </div>
+                <div class="sponsor-div">
+                  <p>
+                    <a href="https://www.vodafone.it/" target="_blank">
+                      <img src="img/logo_vodafone.png" alt="Vodafone" />
+                    </a>
+                  </p>
+                </div>
                 <!--             <div class="sponsor-div">
                                     <p><a href="http://www.aep-italia.it/" target="_blank"><img src="img/logo_aep.png" alt="AEP Ticketing Solutions" /></a></p>
                                 </div>
