--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <meta name="author" content="" />
     <!-- raoul -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://agileday.it/mini/2018/prato/img/agile-venture-twitter.png" />
+    <meta name="twitter:image" content="https://www.agileday.it/venture/2019/firenze/img/agile-venture-firenze-twitter.png" />
     <meta name="twitter:title" content="Agile Venture Firenze2019" />
 
-    <meta property="og:image" content="https://agileday.it/mini/2018/prato/img/agile-venture-social.png" />
+    <meta property="og:image" content="https://www.agileday.it/venture/2019/firenze/img/agile-venture-firenze-social.png" />
     <meta property="og:title" content="Agile Venture Firenze2019" />
     <meta property="og:description" content="Evolution over Revolution" />
 
@@ -106,7 +106,7 @@
             <div class="col-md-8 col-md-offset-2">
               <div class="brand-frame">
                 <h1 class="brand-heading">
-                  <img class="resp" id="headerimg" src="img/agile-venture-firenze.png" alt="Agile Venture Firenze" />
+                  <img class="resp" id="headerimg" src="img/agile-venture-firenze-white.png" alt="Agile Venture Firenze" />
                   Evolution over Revolution
                 </h1>
                 <p class="intro-text">Firenze, sabato 28 settembre 2019</p>
