Add XPeppers as main sponsor

--- a/index.html
+++ b/index.html
@@ -223,6 +223,13 @@
                     </a>
                   </p>
                 </div>
+                <div class="sponsor-div">
+                  <p>
+                    <a href="https://www.xpeppers.com/" target="_blank">
+                      <img src="img/logo_xpeppers.png" alt="XPeppers" />
+                    </a>
+                  </p>
+                </div>
                 <!--             <div class="sponsor-div">
                                     <p><a href="http://www.aep-italia.it/" target="_blank"><img src="img/logo_aep.png" alt="AEP Ticketing Solutions" /></a></p>
                                 </div>
