Add Officina Agile logo

--- a/index.html
+++ b/index.html
@@ -278,6 +278,11 @@
                     <p><a href="https://swicket.io/" target="_blank"><img src="img/logo_swicket.jpg" alt="Swicket" /></a></p>
                 </div>
               </div>
+              <div class="partner-line">
+                <div class="partner-div">
+                  <p><a href="https://www.officinaagile.it/" target="_blank"><img src="img/logo_officina_agile.png" alt="Officina Agile" /></a></p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
