Add MokaByte logo, hidden

--- a/index.html
+++ b/index.html
@@ -282,6 +282,9 @@
                 <div class="partner-div">
                   <p><a href="https://www.officinaagile.it/" target="_blank"><img src="img/logo_officina_agile.png" alt="Officina Agile" /></a></p>
                 </div>
+                <!-- <div class="partner-div">
+                  <p><a href="http://www.mokabyte.it/" target="_blank"><img src="img/logo_mokabyte.png" alt="MokaByte" /></a></p>
+                </div> -->
               </div>
             </div>
           </div>
