--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             <li class="hidden">
               <a href="#page-top"></a>
             </li>
-            <!-- <li class="page-scroll">
-                            <a href="#keynote">Keynote</a>
-                        </li> -->
+            <li class="page-scroll">
+                <a href="#keynote">Keynote</a>
+            </li>
             <li class="page-scroll">
               <a href="#programma">Programma</a>
             </li>
@@ -111,9 +111,9 @@
                 </h1>
                 <p class="intro-text">Firenze, sabato 28 settembre 2019</p>
               </div>
-              <!-- <div class="page-scroll">
-                                    <a href="#keynote" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
-                                </div> -->
+              <div class="page-scroll">
+                  <a href="#keynote" class="btn btn-circle btn-circle-white"> <i class="fa fa-angle-double-down animated"></i> </a>
+              </div>
             </div>
           </div>
         </div>
@@ -134,34 +134,35 @@
       </p>
     </section>
 
-    <!-- <section id="keynote" class="content-section text-center">
+    <section id="keynote" class="content-section text-center">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <h2>Keynote</h2>
-                        <h3 class="keynote__title">Agile pro nobis</h3>
+                        <h3 class="keynote__title">Finding Your Agility</h3>
                         <div>
-                            <p>In vent'anni o poco meno l'approccio agile allo sviluppo del software è passato da un esoterismo ridicolizzato ad una religione mainstream, con tutto il corpus di credenze e prassi tipiche di entrambe le fasi.</p>
-                            <p>Chi vuole più codice e meno alberi da abbracciare e chi vuole più soft skill e meno sindrome di Asperger; chi vuole redimere le banche, chi vuole l’ascesi del garage startupparo; chi rimane aggrappato alle tavole del Manifesto e chi reinventa la Ruota™ per fare presa su un mercato in cui è davvero difficile differenziarsi. Ne abbiamo di ogni tipo. </p>
-                            <p>C'è qualcosa che non va in questo attaccamento viscerale per come le cose andrebbero fatte senza la stessa cura e la stessa quantità di discorsi dedicati invece a cosa si dovrebbe fare. Perché, come nelle religioni vere, non bisogna dimenticare che anche l’agile è nato con uno scopo molto semplice: fare tutti felici. Il problema è che “semplice” e “facile” non sono la stessa cosa!</p>
-                            <p>E nel mondo del software non c'è un al di là in cui rifarsi.</p>
+                            <p>Perché veramente le aziende e le persone si avvicinano all’Agile? Cosa davvero si aspettano di trovare, quali problemi realmente stanno cercando di risolvere?</p>
+                            <p>Queste sono domande importanti. Anzi: fondamentali nel vero senso della parola.</p>
+                            <p>Perché senza questa chiarezza come fondamento, il rischio di “risolvere il problema sbagliato”, con tutti i danni che ne possono conseguire, è davvero molto alto. </p>
+                            <p>Inoltre, cosa vuole dire “applicare Agile”? È solo una questione di metodo e pratiche, o c’è ben altro? Qualcosa di meno visibile ma essenziale per ottenere un vero beneficio?</p>
+                            <p>Per finire, davvero ci sono soluzioni “prêt-à-porter” oppure l’agilità, seppure basata su princìpi comuni, è qualcosa di totalmente soggettivo? Se lo è, come possiamo trovare la nostra propria agilità?</p>
                         </div>
                         <div class="keynote__bio">
                             <div class="speaker">
-                              <a href="http://jacoporomei.com/" target="_blank">
-                                <img src="img/jacopo_romei.jpg" alt="Jacopo Romei" class="speaker__img">
+                              <a href="http://andreaprovaglio.com/" target="_blank">
+                                <img src="img/andrea_provaglio.jpg" alt="Andrea Provaglio" class="speaker__img">
                               </a>
                               <div class="speaker__name">
-                                <a href="http://jacoporomei.com/" target="_blank">Jacopo Romei</a>
+                                <a href="http://andreaprovaglio.com/" target="_blank">Andrea Provaglio</a>
                               </div>
                             </div>
                             <p class="speaker__description">
-                                <p>Nel 2003 ho intravisto un nuovo modo, agile, di fare software e, imprenditore giovanissimo, ho deciso di provare. Di base odio sprecare energie e quindi da 15 anni i lavori sono in corso. Imprenditore seriale, ho introdotto i metodi agili in Doralab, ideato e eBay Italia, ma nel 2011 ho capito che il problema spesso è nella governance delle aziende e nella negoziazione dei contratti, passando per Cocoon Projects e la board dello European Organisation Design Forum (EODF).</p>
-                                <p>In genere vengo ingaggiato da chi vuole sprecare meno tempo, denaro ed entusiasmo. Aiuto le persone che lavorano insieme a lavorare meglio perché credo che sia un bel pezzo di vita per tutti noi. </p>
-                                <p>Mi piace scrivere cose per organizzare la testa: "Pro PHP Refactoring", "PHP Best Practices" e, nel 2017, "Extreme Contracts" su negoziazione e contratti per il "knowledge work" e ho aiutato Jurgen Appelo a pubblicare "Management 3.0".</p>
-                                <p>Sono tra i co-fondatori del network Agile Lean Europe e del PHP User Group Roma, ma dato che le cose belle per un nerd in quest'epoca sono tante, ho fondato anche l'Arduino User Group Roma. </p>
-                                <p>Sono uno speaker seriale e mi piace un sacco descrivere il mondo come lo vorrei sul palco di eventi nazionali e internazionali di riferimento.</p>
-                                <p>Ho la patente nautica perché il mare è il mare, il brevetto di pilota di aliante perché il volo è il volo e sono un facilitatore LSP certificato da Lucio Margulis.</p>
+                                <p>Affianco aziende ed organizzazioni il cui business si basa sul lavoro intellettuale e sull’innovazione (comprese aziende IT) e le assisto nel ripensare le proprie dinamiche organizzative, la loro struttura e mentalità, le loro pratiche e processi, per permettergli di fare business in modo più efficace nel 21mo secolo.</p>
+                                <p>Lavoro a stretto contatto con proprietari, amministratori, manager e team operativi e svolgo una serie di diverse attività che possono comprendere coaching individuale e di team, consulenza su specifiche pratiche e affiancamento “on the job".</p>
+                                <p>Mi interessano particolarmente i temi della leadership distribuita e dell’auto-organizzazione in aziende basate sulla conoscenza, un tema che tocca tutta vari aspetti tra cui: strutture organizzative non convenzionali, capacità di comunicazione individuale e collettiva, capacità di apprendimento e miglioramento continuo e “social skill”.</p>
+                                <p>Da 12 anni mi occupo di Agile (metodo) e di agilità (mindset) con clienti sia in Italia che all’estero. In oltre 25 anni di esperienza professionale, prima nel settore IT poi nell’Agile in senso più ampio, ho collaborato, in tre diversi continenti, con organizzazioni che vanno dalla FAO (Nazioni Unite) fino ad aziende o start-up piccole e dinamiche. Ho una vasta gamma di esperienza, sia nel settore privato che pubblico e con culture diverse.</p>
+                                <p>Risiedo e opero in Italia ed estero. Ho lavorato per quattro anni negli Stati Uniti con un visto di tipo O-1 per “abilità straordinarie nelle scienze”.</p>
+                                <p>Come parte delle mie regolari attività, mi piace condividere le mie esperienze partecipando come speaker alle principali conferenze internazionali del settore.</p>
                             </p>
                         </div>
                     </div>
@@ -170,7 +171,7 @@
                     <a href="#programma" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
                 </div>
             </div>
-        </section> -->
+        </section>
 
     <section id="programma" class="content-section text-center">
       <div class="container">
